aggiunta tasto search e barra a comparsa Sx
Signed-off-by: Alfio <rivalfio87@hotmail.com>

--- a/app/components/customList.template.html
+++ b/app/components/customList.template.html
@@ -13,7 +13,7 @@
                    <p> {{item.date | date: "dd-MM-yyyy HH:mm"}}</p>
                </div>
                <md-checkbox ng-model="item.done" ng-change="customListCtrl.checkStateChanged()" class="md-primary md-align-top-right">
-               </md-checkbox
+               </md-checkbox>
                <md-divider></md-divider>
            </md-list-item>
        </md-list>
