--- a/app/components/customList.template.html
+++ b/app/components/customList.template.html
@@ -1,7 +1,8 @@
-  <md-content class="md-padding scroll tab-content">
-       <md-list>
-           <md-list-item class="md-2-line" ng-repeat="item in customListCtrl.items | filter: customListCtrl.filterFunction" ng-class="customListCtrl.selectedItem == item ? 'selected':''" ng-click="customListCtrl.toggleSelection(item)">
-
+  <md-content class="md-padding scroll tab-content coloreScuro ">
+     
+       <md-list >
+           <md-list-item class="md-2-line" ng-repeat="item in customListCtrl.items | filter: customListCtrl.filterFunction |filter: { title: customListCtrl.categoria}" ng-class="customListCtrl.selectedItem == item ? 'selected':''" ng-click="customListCtrl.toggleSelection(item)">
+               
    
                <md-button ng-click="customListCtrl.changePriority(item)" class="md-icon-button" aria-label="Priority">
                    <md-icon style="color: green" ng-if="item.priority == -1">low_priority</md-icon>
@@ -9,9 +10,13 @@
                    <md-icon style="color: red" ng-if="item.priority == 1">priority_high</md-icon>
                </md-button>
                <div class="md-list-item-text">
+                   
                    <h3>{{item.title}}</h3>
                    <p> {{item.date | date: "dd-MM-yyyy HH:mm"}}</p>
                </div>
+                <md-button  ng-click="" class="md-icon-button" aria-label="Edit">
+                        <md-icon> edit </md-icon>
+                    </md-button>
                <md-checkbox ng-model="item.done" ng-change="customListCtrl.checkStateChanged()" class="md-primary md-align-top-right">
                </md-checkbox>
                <md-divider></md-divider>
