--- a/styles/style.css
+++ b/styles/style.css
@@ -36,15 +36,27 @@ md-tab-content.md-no-scroll>div,
 .selected {
     background: #eaeaea;
 }
+.floatSx{
+    float:left;
+    margin:0px;
+    padding:0px;
+}
 
 
 #menuSx{
     float:left;
     height: 100%;
+    width: 15%;
     background: #222999;
-   
-   
 }
-#menuSx md-icon{
-    color: #909090;
+
+.fontResizer{
+    padding: 10%;
+    font-size: 60%;
+    width: 90%;
+    text-align: center;
+  
+}
+.coloreScuro{
+    background: #eeeeff
 }
