--- a/app/components/categoryList.template.html
+++ b/app/components/categoryList.template.html
@@ -1,6 +1,4 @@
-
-
-   <!-- menu' a tendina-->
+    <!-- menu' a tendina-->
 
 <md-menu-bar class="floatSx">
           <md-menu>
@@ -41,26 +39,25 @@
   
 
     <!-- fine menu' a tendina-->
+   
 <md-tabs md-dynamic-height md-border-bottom class="no-scroll " >
     <md-tab class="floatSx" ng-repeat="categoria in categoryListCtrl.listaCategorie" label="{{categoria}} " ng-click="categoryListCtrl.selectCategory(categoria)" >
         <md-tabs md-dynamic-height md-border-bottom class="no-scroll coloreScuro " style="padding-left: 2em;" >
-            <!-- ai vari tag devo dare la lista di items appropriati-->
-             
             <md-tab    label="Todo">
-                <custom-list categoria= "categoria" items="categoryListCtrl.items  " selected-item="categoryListCtrl.selectedItem" filter-function="categoryListCtrl.notDone"></custom-list>
+                <custom-list ng-show="categoryListCtrl.view == 'apps'" categoria= "categoria" items="categoryListCtrl.items  " selected-item="categoryListCtrl.selectedItem" filter-function="categoryListCtrl.notDone"></custom-list>
+                <custom-grid ng-show="categoryListCtrl.view == 'list'" categoria= "categoria" items="categoryListCtrl.items  " selected-item="categoryListCtrl.selectedItem" filter-function="categoryListCtrl.notDone"></custom-grid>
             </md-tab>
             <md-tab  label="Done">
-                <custom-list categoria= "categoria" items="categoryListCtrl.items " selected-item="categoryListCtrl.items" filter-function="categoryListCtrl.done"></custom-list>
+                <custom-list ng-show="categoryListCtrl.view == 'apps'" categoria= "categoria" items="categoryListCtrl.items " selected-item="categoryListCtrl.items" filter-function="categoryListCtrl.done"></custom-list>
+                <custom-grid ng-show="categoryListCtrl.view == 'list'" categoria= "categoria" items="categoryListCtrl.items  " selected-item="categoryListCtrl.selectedItem" filter-function="categoryListCtrl.notDone"></custom-grid>
+
             </md-tab>
             <md-tab  label="All">
-                <custom-list  categoria= "categoria" items="categoryListCtrl.items" selected-item="categoryListCtrl.selectedItem" filter-function="categoryListCtrl.All"></custom-list>
+                <custom-list  ng-show="categoryListCtrl.view == 'apps'" categoria= "categoria" items="categoryListCtrl.items" selected-item="categoryListCtrl.selectedItem" filter-function="categoryListCtrl.All"></custom-list>
+                <custom-grid ng-show="categoryListCtrl.view == 'list'" categoria= "categoria" items="categoryListCtrl.items  " selected-item="categoryListCtrl.selectedItem" filter-function="categoryListCtrl.notDone"></custom-grid>
             </md-tab>
-        </md-tabs>
-       
-    </md-tab>
-     <md-button ng-click="ctrl.deleteItem()" class="md-icon-button" aria-label="Delete">
-                        <md-icon> delete </md-icon>
-                    </md-button>
+        </md-tabs>       
+    </md-tab>    
 </md-tabs>
 
 
