--- a/app/components/customGrid.template.html
+++ b/app/components/customGrid.template.html
@@ -1,30 +1,36 @@
-  <md-content class="md-padding scroll tab-content coloreScuro ">
-     
-     <!--  <md-list >
-           <md-list-item class="md-2-line" ng-repeat="item in customGridCtrl.items | filter: customGridCtrl.filterFunction |filter: { title: customGridCtrl.categoria}" ng-class="customGridCtrl.selectedItem == item ? 'selected':''" ng-click="customGridCtrl.toggleSelection(item)">
-         -->      
-  
-             
-   <md-grid-list
-  
-        md-cols-gt-md="12" md-cols="10" md-cols-md="8"
-        md-row-height-gt-md="1:4" md-row-height="3:4"
-        md-gutter-gt-md="40px" md-gutter-md="34px" md-gutter="4px">
-      <md-grid-tile
-          ng-repeat="tile in customGridCtrl.items | filter: customGridCtrl.filterFunction |filter: { title: customGridCtrl.categoria} "
-          ng-style="{
-            'background': '#eeeeee',
-            'border-color': '#dddddd', 
-            'border-style': 'double',
-            'border-radius' : '30px'
-          }"
-          md-colspan-gt-sm="2"
-          md-rowspan-gt-sm="1">
- <md-grid-header><h3>{{tile.title}}</h3></md-grid-header>
-      <h3>{{tile.title}}</h3>
-      <p>questo è la categoria</p>
-      <p>questo è boh</p>
-      </md-grid-tile>
-    </md-grid-list>
+<div class='md-padding scroll' layout="row" layout-wrap >
+    
 
-   </md-content>
+     <div   flex="30" flex-sm="50" flex-gt-xs="30" class="prova"  ng-repeat="item in customListCtrl.items | filter: customListCtrl.filterFunction |filter: { category: customListCtrl.categoria}">
+  
+    <md-card   >
+  <md-button>
+     <md-card-title>
+      <md-card-title-text>
+        <span class="md-headline">{{item.title}}</span>
+        <span class="md-subhead">Tell us a little about you.</span>
+      </md-card-title-text>
+    </md-card-title>
+     <md-divider></md-divider>
+      <md-card-content>
+        
+         <span>data inizio task: {{item.date | date: "dd-MM-yyyy HH:mm"}}</span> <div> data fine:</div>
+          <md-divider></md-divider>
+           <span>done : {{item.done}}</span>
+         <p>qua scriviamo qualcosa</p>
+</md-button>
+          <md-divider></md-divider>
+         <md-card-actions layout="row" layout-align="end center">
+          <md-button><md-icon>edit</md-icon></md-button>
+          <md-button><md-icon>delete</md-icon></md-button>
+         </md-card-actions>
+      </md-card-content>
+     
+    </md-card>
+
+     </div>
+   
+    
+  </div>
+
+   
