--- a/app/components/customGrid.template.html
+++ b/app/components/customGrid.template.html
@@ -1,10 +1,10 @@
 <div class='md-padding scroll' layout="row" layout-wrap >
-    
-
-     <div   flex="30" flex-sm="50" flex-gt-xs="30" class="prova"  ng-repeat="item in customListCtrl.items | filter: customListCtrl.filterFunction |filter: { category: customListCtrl.categoria}">
-  
+  <md-button class="md-fab md-primary " aria-label="Add Todo" ng-click="customListCtrl.createItem($event)">
+                    <md-icon>search</md-icon>
+                </md-button>
+     <div   flex="30" flex-sm="50" flex-gt-xs="30" class="prova"  ng-repeat="item in customListCtrl.items | filter: customListCtrl.filterFunction |filter: { category: customListCtrl.categoria} ">
     <md-card   >
-  <md-button>
+  <md-button ng-click="customListCtrl.toggleSelection(item)" ng-class="customListCtrl.selectedItem == item ? 'selected':''">
      <md-card-title>
       <md-card-title-text>
         <span class="md-headline">{{item.title}}</span>
@@ -14,15 +14,27 @@
      <md-divider></md-divider>
       <md-card-content>
         
-         <span>data inizio task: {{item.date | date: "dd-MM-yyyy HH:mm"}}</span> <div> data fine:</div>
+         <span>Data inizio task: {{item.date | date: "dd-MM-yyyy HH:mm"}}</span> 
+         <div> Tempo stimato:  {{item.estimated}} ore</div>
           <md-divider></md-divider>
-           <span>done : {{item.done}}</span>
-         <p>qua scriviamo qualcosa</p>
+           <span>Fatto : {{item.done}}</span>
+         <p>description: {{item.description}} </p>
 </md-button>
           <md-divider></md-divider>
-         <md-card-actions layout="row" layout-align="end center">
-          <md-button><md-icon>edit</md-icon></md-button>
-          <md-button><md-icon>delete</md-icon></md-button>
+         <md-card-actions layout="row" >
+          <md-button ng-click="customListCtrl.changePriority(item)" class="md-icon-button" aria-label="Priority">
+                   <md-icon style="color: green" ng-if="item.priority == -1">low_priority</md-icon>
+                   <md-icon ng-if="item.priority == 0">label</md-icon>
+                   <md-icon style="color: red" ng-if="item.priority == 1">priority_high</md-icon>
+          </md-button>
+          <md-button ng-click="customListCtrl.editItem(item)" ><md-icon>edit</md-icon></md-button>
+          
+          <md-button  ng-click="customListCtrl.deleteItem(item)" class="md-icon-button" aria-label="Delete">
+                        <md-icon> delete </md-icon>
+          </md-button>
+          <md-checkbox ng-model="item.done" ng-change="customListCtrl.checkStateChanged(item)" class="md-primary md-align-top-right">
+          </md-checkbox>
+
          </md-card-actions>
       </md-card-content>
      
@@ -30,7 +42,9 @@
 
      </div>
    
-    
+     <md-button class="md-fab md-primary " aria-label="Add Todo" ng-click="customListCtrl.createItem($event)">
+                    <md-icon>add</md-icon>
+                </md-button>
   </div>
 
    
