--- a/app/components/customList.template.html
+++ b/app/components/customList.template.html
@@ -14,13 +14,19 @@
                    <h3>{{item.title}}</h3>
                    <p> {{item.date | date: "dd-MM-yyyy HH:mm"}}</p>
                </div>
-                <md-button  ng-click="" class="md-icon-button" aria-label="Edit">
+                <md-button  ng-click="customListCtrl.editItem(item)" class="md-icon-button" aria-label="Edit">
                         <md-icon> edit </md-icon>
                     </md-button>
-               <md-checkbox ng-model="item.done" ng-change="customListCtrl.checkStateChanged()" class="md-primary md-align-top-right">
+                    <md-button  ng-click="customListCtrl.deleteItem(item)" class="md-icon-button" aria-label="Delete">
+                        <md-icon> delete </md-icon>
+                     </md-button>
+               <md-checkbox  aria-label= "label" ng-model="item.done" ng-change="customListCtrl.checkStateChanged(item)" class="md-primary md-align-top-right">
                </md-checkbox>
                <md-divider></md-divider>
            </md-list-item>
        </md-list>
+        <md-button class="md-fab md-primary " aria-label="Add Todo" ng-click="customListCtrl.createItem($event)">
+                    <md-icon>add</md-icon>
+                </md-button>
    </md-content>
     
