--- a/app/components/categoryList.template.html
+++ b/app/components/categoryList.template.html
@@ -16,44 +16,31 @@
                   </md-menu-content>
                 </md-menu>
               </md-menu-item>
-              <md-menu-item>
-                <md-button ng-click="">
-                  Open...
-                  <span class="md-alt-text"> </span>
-                </md-button>
-              </md-menu-item>
-              <md-menu-item> <md-button ng-disabled="categoryListCtrl.selectedCategory == null" ng-click=""> Rename Category</md-button></md-menu-item>
+             
+              <md-menu-item> <md-button ng-disabled="categoryListCtrl.selectedCategory == null" ng-click="categoryListCtrl.renameCategory()"> Rename Category</md-button></md-menu-item>
               <md-menu-item> <md-button ng-disabled="categoryListCtrl.selectedCategory == null"  ng-click="categoryListCtrl.removeCategory()"> Remove Category</md-button></md-menu-item>
               <md-menu-divider></md-menu-divider>
-              <md-menu-item>
-                <md-button ng-click="">
-                  Print
-                  <span class="md-alt-text"></span>
-                </md-button>
-              </md-menu-item>
+              
             </md-menu-content>
           </md-menu>
   </md-menu-bar>
-  
-
     <!-- fine menu' a tendina-->
    
-<md-tabs md-dynamic-height md-border-bottom class="no-scroll " >
+<md-tabs md-dynamic-height md-border-bottom class="no-scroll" >
     <md-tab class="floatSx" ng-repeat="categoria in categoryListCtrl.listaCategorie" label="{{categoria}} " ng-click="categoryListCtrl.selectCategory(categoria)" >
         <md-tabs md-dynamic-height md-border-bottom class="no-scroll coloreScuro " style="padding-left: 2em;" >
          <md-tab    label="Todo">
-                <div custom-list  type = "customList" lista-categorie=" categoryListCtrl.listaCategorie" items="categoryListCtrl.items" ng-show="categoryListCtrl.view == 'apps'"  categoria= "categoria"  filter-function="categoryListCtrl.notDone"></div>
-                <div custom-list  type = "customGrid"  lista-categorie=" categoryListCtrl.listaCategorie"  items="categoryListCtrl.items" ng-show="categoryListCtrl.view == 'list'"  categoria= "categoria"  filter-function="categoryListCtrl.notDone"></div>
+                <div custom-list  type = "customList" lista-categorie=" categoryListCtrl.listaCategorie" items="categoryListCtrl.items" ng-show="categoryListCtrl.view == 'apps'"  categoria= "categoria"  filter-function="categoryListCtrl.notDone" imput-search="categoryListCtrl.inputSearch"></div>
+                <div custom-list  type = "customGrid"  lista-categorie=" categoryListCtrl.listaCategorie"  items="categoryListCtrl.items" ng-show="categoryListCtrl.view == 'list'"  categoria= "categoria"  filter-function="categoryListCtrl.notDone" imput-search="categoryListCtrl.inputSearch"></div>
             </md-tab>
             <md-tab  label="Done">
-                <div custom-list  type = "customList" lista-categorie=" categoryListCtrl.listaCategorie" items="categoryListCtrl.items" ng-show="categoryListCtrl.view == 'apps'"  categoria= "categoria"  filter-function="categoryListCtrl.done"></div>
-                <div custom-list  type = "customGrid"  lista-categorie=" categoryListCtrl.listaCategorie"  items="categoryListCtrl.items" ng-show="categoryListCtrl.view == 'list'"  categoria= "categoria"  filter-function="categoryListCtrl.done"></div>
+                <div custom-list  type = "customList" lista-categorie=" categoryListCtrl.listaCategorie" items="categoryListCtrl.items" ng-show="categoryListCtrl.view == 'apps'"  categoria= "categoria"  filter-function="categoryListCtrl.done" imput-search="categoryListCtrl.inputSearch"></div>
+                <div custom-list  type = "customGrid"  lista-categorie=" categoryListCtrl.listaCategorie"  items="categoryListCtrl.items" ng-show="categoryListCtrl.view == 'list'"  categoria= "categoria"  filter-function="categoryListCtrl.done" imput-search="categoryListCtrl.inputSearch"></div>
             </md-tab>
             <md-tab  label="All">
-                <div custom-list  type = "customList" lista-categorie=" categoryListCtrl.listaCategorie" items="categoryListCtrl.items" ng-show="categoryListCtrl.view == 'apps'"  categoria= "categoria"  filter-function="categoryListCtrl.All"></div>
-                <div custom-list  type = "customGrid"  lista-categorie=" categoryListCtrl.listaCategorie"  items="categoryListCtrl.items" ng-show="categoryListCtrl.view == 'list'"  categoria= "categoria"  filter-function="categoryListCtrl.All"></div>
-            
-            </md-tab>
+                <div custom-list  type = "customList" lista-categorie=" categoryListCtrl.listaCategorie" items="categoryListCtrl.items" ng-show="categoryListCtrl.view == 'apps'"  categoria= "categoria"  filter-function="categoryListCtrl.all" imput-search="categoryListCtrl.inputSearch"></div>
+                <div custom-list  type = "customGrid"  lista-categorie=" categoryListCtrl.listaCategorie"  items="categoryListCtrl.items" ng-show="categoryListCtrl.view == 'list'"  categoria= "categoria"  filter-function="categoryListCtrl.all" imput-search="categoryListCtrl.inputSearch"></div>
+            </md-tab>           
         </md-tabs>       
     </md-tab>    
 </md-tabs>
