--- a/styles/style.css
+++ b/styles/style.css
@@ -2,8 +2,8 @@
 
 .add-button {
     position: absolute;
-    bottom: 50px;
-    right: 30px;
+    top: 70%;
+    right: 5%;
 }
 
 .menu-button{
@@ -19,14 +19,15 @@ md-tabs.md-dynamic-height md-tabs-content-wrapper,
 md-tab-content.md-no-scroll,
 md-tab-content.md-no-scroll>div,
 .no-scroll {
-    height: 100%;
+    height: 97%;
     overflow-y: hidden !important;
     
 }
 
 .scroll {
-    height: 100%;
+    height: 80%;
     overflow-y: auto;
+    
 }
 
 .tab-content {
@@ -59,4 +60,8 @@ md-tab-content.md-no-scroll>div,
 }
 .coloreScuro{
     background: #eeeeff
+}
+.left{
+    padding-top:3px;
+    padding-left:5px;
 }
