--- a/app/components/customGrid.template.html
+++ b/app/components/customGrid.template.html
@@ -30,11 +30,11 @@
                                     <md-icon ng-if="item.priority == 0">label</md-icon>
                                     <md-icon style="color: red" ng-if="item.priority == 1">priority_high</md-icon>
                             </md-button>
-                            <md-button ng-click="customListCtrl.editItem(item)" >
+                            <md-button ng-disabled="customListCtrl.selectedItems.indexOf(item) == -1" ng-click="customListCtrl.editItem($event)" >
                                   <md-icon>edit</md-icon>
                             </md-button>
                             
-                            <md-button  ng-click="customListCtrl.deleteItem(item)" class="md-icon-button" aria-label="Delete">
+                            <md-button  ng-disabled="customListCtrl.selectedItems.indexOf(item) == -1" ng-click="customListCtrl.deleteItem($event)" class="md-icon-button" aria-label="Delete">
                                           <md-icon> delete </md-icon>
                             </md-button>
                       </md-card-actions>
