--- a/app/components/customList.template.html
+++ b/app/components/customList.template.html
@@ -15,10 +15,10 @@
                    <h3>{{item.title}}</h3>
                    <p> {{item.date | date: "dd-MM-yyyy HH:mm"}}</p>
                </div>
-                <md-button  ng-click="customListCtrl.editItem(item)" class="md-icon-button" aria-label="Edit">
+                <md-button  ng-disabled="customListCtrl.selectedItems.indexOf(item) == -1" ng-click="customListCtrl.editItem($event)" class="md-icon-button" aria-label="Edit">
                         <md-icon> edit </md-icon>
                     </md-button>
-                    <md-button  ng-click="customListCtrl.deleteItem(item)" class="md-icon-button" aria-label="Delete">
+                    <md-button  ng-disabled="customListCtrl.selectedItems.indexOf(item) == -1" ng-click="customListCtrl.deleteItem($event)" class="md-icon-button" aria-label="Delete">
                         <md-icon> delete </md-icon>
                      </md-button>
                <md-checkbox  aria-label= "label {{item.title}}" ng-model="item.done" ng-change="customListCtrl.checkStateChanged(item)" class="md-primary md-align-top-right">
@@ -27,7 +27,7 @@
                <md-divider></md-divider>
            </md-list-item>
        </md-list>
-        <md-button class="md-fab md-primary " aria-label="Add Todo" ng-click="customListCtrl.createItem($event)">
+        <md-button class="md-fab md-primary add-button" aria-label="Add Todo" ng-click="customListCtrl.createItem($event)">
                     <md-icon>add</md-icon>
                 </md-button>
    </md-content>
