--- a/app/components/customList.template.html
+++ b/app/components/customList.template.html
@@ -12,12 +12,17 @@
                </md-button>
                <div class="md-list-item-text">
                    
-                   <h3>{{item.title}}</h3>
+                   <h3>{{item.title | limitTo:15}}</h3>
                    <p> {{item.date | date: "dd-MM-yyyy HH:mm"}}</p>
                </div>
                 <md-button  ng-disabled="customListCtrl.selectedItems.indexOf(item) == -1" ng-click="customListCtrl.editItem($event)" class="md-icon-button" aria-label="Edit">
                         <md-icon> edit </md-icon>
                     </md-button>
+
+                    <md-button  ng-disabled="customListCtrl.selectedItems.indexOf(item) == -1" ng-click="customListCtrl.showItem(item)" class="md-icon-button" aria-label="Show">
+                        <md-icon> visibility </md-icon>
+                     </md-button>
+
                     <md-button  ng-disabled="customListCtrl.selectedItems.indexOf(item) == -1" ng-click="customListCtrl.deleteItem($event)" class="md-icon-button" aria-label="Delete">
                         <md-icon> delete </md-icon>
                      </md-button>
