--- a/app/components/customNoteGrid.template.html
+++ b/app/components/customNoteGrid.template.html
@@ -35,19 +35,23 @@
                                 <md-button ng-click="customNoteCtrl.toggleSelection(item)" >
                                   <md-card-title>
                                     <md-card-title-text>
-                                      <span class="md-headline coloreScuro">{{item.title}}</span>
-                                      <span class="md-subhead coloreScuro">Data: {{item.data | date: "dd-MM-yyyy"}}</span>
+                                      <span class="md-headline coloreScuro">{{item.title | limitTo:15}}</span>
+                                      <span class="md-subhead coloreScuro">Date: {{item.date | date: "dd-MM-yyyy"}}</span>
                                     </md-card-title-text>
                                   </md-card-title>
                                   <md-divider></md-divider>
                                   <md-card-content>
-                                      <p>description: {{item.description}} </p>
+                                      <p>description: {{item.description | limitTo:15}} </p>
                                       </md-button>
                                       <md-divider></md-divider>
                                       
                                     <md-card-actions layout="row"    class="left" >
-                                          <md-button  ng-disabled="customNoteCtrl.selectedItems.indexOf(item) == -1" ng-click="customNoteCtrl.editItem($event)" class="md-icon-button" aria-label="Delete" >
+                                          <md-button  ng-disabled="customNoteCtrl.selectedItems.indexOf(item) == -1" ng-click="customNoteCtrl.editItem($event)" class="md-icon-button" aria-label="Edit" >
                                                 <md-icon>edit</md-icon>
+                                          </md-button>
+
+                                          <md-button  ng-disabled="customNoteCtrl.selectedItems.indexOf(item) == -1" ng-click="customNoteCtrl.showItem(item)" class="md-icon-button" aria-label="Show">
+                                                <md-icon> visibility </md-icon>
                                           </md-button>
                                           
                                           <md-button  ng-disabled="customNoteCtrl.selectedItems.indexOf(item) == -1"  ng-click="customNoteCtrl.deleteItem($event)" class="md-icon-button" aria-label="Delete">
