--- a/app/components/customNoteList.template.html
+++ b/app/components/customNoteList.template.html
@@ -34,13 +34,16 @@
                        <md-list-item class="md-3-line" style="background:{{item.color}};" ng-repeat="item in customNoteCtrl.items |  myFilter: customNoteCtrl.inputSearch : customNoteCtrl.cercaPer.abbrev : null : null "  ng-class="customNoteCtrl.selectedItems.indexOf(item)!=-1? 'selected':''" ng-click="customNoteCtrl.toggleSelection(item)">
                            <div class="md-list-item-text">
                                 
-                                <h3>{{item.title}}</h3>
-                                <p> {{item.data | date: "dd-MM-yyyy"}}</p> 
-                                <p> {{item.description}}</p>
+                                <h3>{{item.title | limitTo:15}}</h3>
+                                <p> {{item.date | date: "dd-MM-yyyy"}}</p> 
+                                <p> {{item.description | limitTo:15}}</p>
                                
                             </div>
                               <md-button  ng-disabled="customNoteCtrl.selectedItems.indexOf(item) == -1" ng-click="customNoteCtrl.editItem($event)" class="md-icon-button" aria-label="Edit">
                                       <md-icon> edit </md-icon>
+                                  </md-button>
+                                  <md-button  ng-disabled="customNoteCtrl.selectedItems.indexOf(item) == -1" ng-click="customNoteCtrl.showItem(item)" class="md-icon-button" aria-label="Show">
+                                      <md-icon> visibility </md-icon>
                                   </md-button>
                                   <md-button  ng-disabled="customNoteCtrl.selectedItems.indexOf(item) == -1" ng-click="customNoteCtrl.deleteItem($event)" class="md-icon-button" aria-label="Delete">
                                       <md-icon> delete </md-icon>
