--- a/app/components/customList.template.html
+++ b/app/components/customList.template.html
@@ -3,7 +3,7 @@
        <md-list >
           <!-- <md-list-item class="md-2-line" ng-repeat="item in customListCtrl.items | filter: customListCtrl.filterFunction |filter: { category : customListCtrl.categoria}" ng-class="customListCtrl.selectedItem == item ? 'selected':''" ng-click="customListCtrl.toggleSelection(item)">
                -->
-            <md-list-item class="md-2-line" ng-repeat="item in customListCtrl.items |  myFilter: customListCtrl.imputSearch : null :customListCtrl.categoria : customListCtrl.filterFunction " ng-class="customListCtrl.selectedItems.indexOf(item)!=-1? 'selected':''" ng-click="customListCtrl.toggleSelection(item)">
+            <md-list-item class="md-2-line" ng-repeat="item in customListCtrl.items |  myFilter: customListCtrl.imputSearch : customListCtrl.cercaPer.abbrev ::customListCtrl.categoria : customListCtrl.filterFunction " ng-class="customListCtrl.selectedItems.indexOf(item)!=-1? 'selected':''" ng-click="customListCtrl.toggleSelection(item)">
 
                <md-button ng-click="customListCtrl.changePriority(item)" class="md-icon-button" aria-label="Priority">
                    <md-icon style="color: green" ng-if="item.priority == -1">low_priority</md-icon>
